--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
 
   flutter_map: any
   geolocator: any
+  cached_network_image: any
 
 
   # The following adds the Cupertino Icons font to your application.
