--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -33,11 +33,8 @@ dependencies:
   flutter_map: any
   geolocator: any
   cached_network_image: any
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  path_provider: any
+  images_picker: any
 
 dev_dependencies:
   flutter_test:
