--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -30,13 +30,13 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_map: any
-  geolocator: any
+  flutter_map: ^0.14.0
+  geolocator: ^7.7.0
 
-  cached_network_image: any
+  cached_network_image: ^3.1.0
 
-  gallery_saver: any
-  images_picker: any
+  gallery_saver: ^2.3.1
+  images_picker: ^1.2.4
 
 dev_dependencies:
   flutter_test:
@@ -47,7 +47,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^1.0.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
