--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
     sdk: flutter
 
   flutter_map: ^0.14.0
-  geolocator: ^7.7.0
+  location: ^4.2.0
 
   cached_network_image: ^3.1.0
 
