build script fixed

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
       working-directory: ./client/
       run: |
         flutter pub get
-        flutter build web --base-href "./"
+        flutter build web --base-href "/HogWeedGo/"
         
     - name: NoJekyll ❌
       run: touch ./client/build/web/.nojekyll
