--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   location: ^4.2.0
 
   cached_network_image: ^3.1.0
+  url_launcher: ^6.0.12
 
   gallery_saver: ^2.3.1
   images_picker: ^1.2.4
