--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   gallery_saver: ^2.3.1
   images_picker: ^1.2.4
 
+  flutter_focus_watcher: ^2.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
