--- a/ml-helper/Pipfile
+++ b/ml-helper/Pipfile
@@ -13,6 +13,7 @@ requests = "~=2.27.1"
 tensorflow = "~=2.7.0"
 Pillow = "~=9.0.0"
 ipython = "~=8.0.0"
+imagehash = "~=4.2.1"
 
 [requires]
-python_version = "3.10"
+python_version = "3.9"
