--- a/ml-helper/Pipfile
+++ b/ml-helper/Pipfile
@@ -4,6 +4,7 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [packages]
+jupyter = "~=1.0.0"
 nbstripout = "~=0.5.0"
 numpy = "~=1.22.1"
 pandas = "~=1.3.5"
@@ -14,6 +15,8 @@ tensorflow = "~=2.7.0"
 Pillow = "~=9.0.0"
 ipython = "~=8.0.0"
 imagehash = "~=4.2.1"
+nvidia-pyindex = "~=1.0.9"
+nvidia-cuda-runtime-cu11 = "~=0.0.1.dev5"
 
 [requires]
 python_version = "3.9"
