--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,7 @@ jobs:
     - name: Fetch Github Release Asset
       uses: dsaltares/fetch-gh-release-asset@0.06
       with:
+        token: ${{ secrets.GITHUB_TOKEN }}
         file: "hogweed-detector.tflite"
         target: "./hogweed-detector.tflite"
         
