--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,8 @@
 name: RELEASE
 
 on:
-  push
+  release:
+    types: [published]
 
 jobs:
   check-detector:
@@ -26,6 +27,4 @@ jobs:
         nbstripout --install
 
     - name: Test Detector 
-      run: |
-        cat ./ml-helper/datasets/test.csv
-        python3 ./ml-helper/test.py -n ./hogweed-detector.tflite -s ./ml-helper/datasets/test.csv
+      run: python3 ./ml-helper/test.py -n ./hogweed-detector.tflite -s ./ml-helper/datasets/test.csv
