--- a/.github/workflows/ml-test.yml
+++ b/.github/workflows/ml-test.yml
@@ -1,8 +1,11 @@
-name: RELEASE
+name: ML-TEST
 
 on:
   release:
-    types: [published]
+    types: [ published ]
+  push:
+    paths:
+      - 'ml-helper/models/*'
 
 jobs:
   check-detector:
@@ -11,20 +14,19 @@ jobs:
     steps:
     - name: Checkout 🛎️
       uses: actions/checkout@v2.3.4 
-    
-    - name: Fetch Github Release Asset
+
+    - name: Fetch Github Release Asset 📦
       uses: dsaltares/fetch-gh-release-asset@0.06
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         file: "hogweed-detector.tflite"
         target: "./hogweed-detector.tflite"
-        
-    - name: Install Dependencies
+
+    - name: Install Dependencies 🛠
       run: |
         cd ./ml-helper
         pip3 install --user pipenv
         pipenv install --skip-lock --system
-        nbstripout --install
 
-    - name: Test Detector 
+    - name: Test Detector 🧪
       run: python3 ./ml-helper/test.py -n ./hogweed-detector.tflite -s ./ml-helper/datasets/test.csv
