--- a/.github/workflows/ml-test.yml
+++ b/.github/workflows/ml-test.yml
@@ -13,14 +13,7 @@ jobs:
 
     steps:
     - name: Checkout 🛎️
-      uses: actions/checkout@v2.3.4 
-
-    - name: Fetch Github Release Asset 📦
-      uses: dsaltares/fetch-gh-release-asset@0.06
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        file: "hogweed-detector.tflite"
-        target: "./hogweed-detector.tflite"
+      uses: actions/checkout@v2.3.4
 
     - name: Install Dependencies 🛠
       run: |
@@ -29,4 +22,4 @@ jobs:
         pipenv install --skip-lock --system
 
     - name: Test Detector 🧪
-      run: python3 ./ml-helper/test.py -n ./hogweed-detector.tflite -s ./ml-helper/datasets/test.csv
+      run: python3 ./ml-helper/test.py -n ./ml-helper/models/hogweed-detector.tflite -s ./ml-helper/datasets/test.csv
