--- a/.github/workflows/ml-test.yml
+++ b/.github/workflows/ml-test.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
     - name: Checkout 🛎️
       uses: actions/checkout@v2.3.4
+      with:
+        lfs: true
 
     - name: Install Dependencies 🛠
       run: |
