--- a/server/Pipfile
+++ b/server/Pipfile
@@ -4,10 +4,10 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [packages]
-django = "*"
-pillow = "*"
-psycopg2-binary = "*"
-django-leaflet = "*"
+django = "~=4.0.1"
+pillow = "~=9.0.0"
+psycopg2-binary = "~=2.9.3"
+django-leaflet = "~=0.28.2"
 
 [requires]
-python_version = "3.10" 
+python_version = "3.10"
