--- a/server/samples/sample_config.env
+++ b/server/samples/sample_config.env
@@ -1,12 +1,12 @@
 DJANGO_SECRET=Secret, generated for current production build
 
-ADMIN_EMAIL=E-mail address of administrator - default superuser of the server
-ADMIN_PASSWORD=Password of administrator - default superuser of the server
+DJANGO_SUPERUSER_EMAIL=E-mail address of administrator - default superuser of the server
+DJANGO_SUPERUSER_PASSWORD=Password of administrator - default superuser of the server
 
-DATABASE_HOST=Device, the PostgreSQL instance is running on
-DATABASE_NAME=Name of the database assigned for the server
-DATABASE_USER=Username, all database calls will be signed with
-DATABASE_PASSWORD=Password for accessing database with given username
+POSTGRES_HOST=Device, the PostgreSQL instance is running on (required for local run only)
+POSTGRES_NAME=Name of the database assigned for the server
+POSTGRES_USER=Username, all database calls will be signed with
+POSTGRES_PASSWORD=Password for accessing database with given username
 
 SERVER_EMAIL_ADDRESS=E-mail address server will be using for service e-mails
 SERVER_EMAIL_TLS=Whether or not server should use TLS for accessing service e-mails
