--- a/server/Pipfile
+++ b/server/Pipfile
@@ -8,6 +8,7 @@ django = "~=4.0.1"
 pillow = "~=9.0.0"
 psycopg2-binary = "~=2.9.3"
 django-leaflet = "~=0.28.2"
+daphne = "~=3.0.2"
 
 [requires]
 python_version = "3.10"
