--- a/server/samples/sample_config.env
+++ b/server/samples/sample_config.env
@@ -1,5 +1,5 @@
 DJANGO_SECRET=Secret, generated for current production build
-DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+DJANGO_ALLOWED_HOSTS=Devices, which will be able to access site
 
 DJANGO_SUPERUSER_EMAIL=E-mail address of administrator - default superuser of the server
 DJANGO_SUPERUSER_PASSWORD=Password of administrator - default superuser of the server
