--- a/server/docker/docker-compose.yml
+++ b/server/docker/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - ../docker-volume/backup:/app/backup
       - ../docker-volume/logs:/app/logs
     healthcheck:
-      test: wget -qO- http://localhost:$HOGWEED_PORT/healthcheck/
+      test: wget -q -O - localhost:$HOGWEED_PORT/healthcheck/
       interval: 10s
       timeout: 5s
       retries: 3
@@ -59,7 +59,7 @@ services:
     expose:
       - 5432
     healthcheck:
-      test: pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB
+      test: pg_isready -U "$$POSTGRES_USER" -d "$$POSTGRES_DB"
       interval: 10s
       timeout: 5s
       retries: 3
