--- a/server/Pipfile
+++ b/server/Pipfile
@@ -9,6 +9,7 @@ pillow = "~=9.0.0"
 psycopg2-binary = "~=2.9.3"
 django-leaflet = "~=0.28.2"
 daphne = "~=3.0.2"
+djangorestframework = "~=3.13.1"
 
 [requires]
 python_version = "3.10"
