--- a/server/docker/.env.development
+++ b/server/docker/.env.development
@@ -1,7 +1,6 @@
 ENV=development
 COMPOSE_PROJECT_NAME=hogweedgo-dev
 MOCK_SMTP_SERVER=True
-SERVER_PORT=8080
 
-NGINX_PORT=8888
-HOGWEED_PORT=3030
+SERVER_PORT_HTTP=8000
+SERVER_PORT_HTTPS=4430
