--- a/server/docker/.env.production
+++ b/server/docker/.env.production
@@ -1,7 +1,6 @@
 ENV=production
 COMPOSE_PROJECT_NAME=hogweedgo-prod
 MOCK_SMTP_SERVER=False
-SERVER_PORT=80
 
-NGINX_PORT=8800
-HOGWEED_PORT=3000
+SERVER_PORT_HTTP=80
+SERVER_PORT_HTTPS=443
