--- a/server/docker/nginx.conf.template
+++ b/server/docker/nginx.conf.template
@@ -15,10 +15,9 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Host $host:$proxy_port;
-        proxy_set_header Origin https://$host:$proxy_port;
     }
 
-    location /media/ {
+    location /media/*.(jpg|jpeg|gif|png|svg|ico) {
         alias /app/media/;
     }
 
