--- a/server/Pipfile
+++ b/server/Pipfile
@@ -10,8 +10,8 @@ psycopg2-binary = "~=2.9.3"
 django-leaflet = "~=0.28.2"
 daphne = "~=3.0.2"
 djangorestframework = "~=3.13.1"
-# drf-extra-fields = "~=3.2.1"
-PyYAML = "~=6.0"
+django-cleanup = "~=6.0.0"
+# PyYAML = "~=6.0" -> json format?
 
 [requires]
 python_version = "3.10"
