--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2.3.4
 
       - name: Create user config file 🛠
-        run: ./server/config-generator.sh 127.0.0.1
+        run: cd server && ./config-generator.sh 127.0.0.1
 
       - name: Install Newman for API testing 🧑‍🚀
         run: npm install newman
