--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -20,10 +20,10 @@ jobs:
         run: npm install newman
         
       - name: Run server in Docker 📥
-        run: cd server && docker-compose -f ./docker/docker-compose.yml --env-file=./docker/.env.development up --build
+        run: cd server && docker-compose -f ./docker/docker-compose.yml --env-file=./docker/.env.development up --build -d
         
       - name: Wait for server to start ⏱
-        run: sleep 90
+        run: sleep 60
 
       - name: Run API tests 🌐
         run: cd ./server/tests && newman run ./HogWeedGoAPI.postman_collection.json
