--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -28,8 +28,9 @@ jobs:
           delay: 30000
           interval: 1000
           log: true
+          verbose: true
           timeout: 150000
-          resource: http://localhost:8000/healthcheck
+          resource: http://0.0.0.0:8000/healthcheck
 
       - name: Run API tests 🌐
         run: cd ./server/tests && newman run ./HogWeedGoAPI.postman_collection.json
