--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -14,13 +14,13 @@ jobs:
         uses: actions/checkout@v2.3.4
 
       - name: Create user config file 🛠
-        run: cd server && ./config-generator.sh 127.0.0.1
-
-      - name: Install Newman for API testing 🧑‍🚀
-        run: npm install newman
+        run: cd server && ./config-generator.sh localhost
         
       - name: Run server in Docker 📥
-        run: cd server && docker-compose -f ./docker/docker-compose.yml --env-file=./docker/.env.development up --build -d
+        run: cd server && sudo docker-compose -f ./docker/docker-compose.yml --env-file=./docker/.env.development up --build -d
+    
+      - name: Install Newman for API testing 🧑‍🚀
+        run: npm install newman
         
       - name: Wait for server to start ⏱
         uses: ifaxity/wait-on-action@v1
@@ -28,12 +28,11 @@ jobs:
           delay: 30000
           interval: 1000
           log: true
-          verbose: true
           timeout: 150000
-          resource: http://0.0.0.0:8000/healthcheck
+          resource: http://localhost:8000/healthcheck
 
       - name: Run API tests 🌐
         run: cd ./server/tests && newman run ./HogWeedGoAPI.postman_collection.json
         
       - name: Stop server container 📤
-        run: docker-compose stop -t 30
+        run: cd server && sudo docker-compose -f ./docker/docker-compose.yml --env-file=./docker/.env.development stop -t 30
