--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -19,7 +19,7 @@ on:
 
 jobs:
   test-server-local:
-    if: ${{ github.event.inputs.publish }}
+    if: ${{ github.event.inputs.test }}
     runs-on: ubuntu-latest
 
     steps:
@@ -49,7 +49,7 @@ jobs:
         run: cd ./server && ./init-local.sh ./config.env test
 
   test-server-docker:
-    if: ${{ github.event.inputs.publish }}
+    if: ${{ github.event.inputs.test }}
     runs-on: ubuntu-latest
 
     steps:
@@ -86,6 +86,12 @@ jobs:
 
   publish-server-image:
     runs-on: ubuntu-latest
+    needs: [test-server-local, test-server-docker]
+#    if: |
+#      always() &&
+#      (needs.test-server-local.result == 'success' || needs.test-server-local.result == 'skipped') &&
+#      (needs.test-server-local.result == 'success' || needs.test-server-local.result == 'skipped') &&
+#      ${{ github.event.inputs.publish }}
     permissions:
       contents: read
       packages: write
@@ -97,7 +103,7 @@ jobs:
       - name: Log in to the Container registry
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
@@ -105,7 +111,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ghcr.io/${{ github.repository }}
 
       - name: Build and push Docker image
         if: ${{ github.event.inputs.publish }}
