--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -117,10 +117,13 @@ jobs:
           images: ghcr.io/${{ github.repository }}
 
       - name: Build and push Docker image
-        if: ${{ github.event.inputs.publish }}
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
-          context: ./server/docker/
+          context: ./server/
+          file: ./server/docker/Dockerfile-alpine
+          build-args:
+            - WORKDIR=app
+            - HOGWEED_PORT=3000
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
